tests/ui/mir-dataflow/inits-1.stderr
error: crablangc_peek: bit not set
  --> $DIR/inits-1.rs:14:5
   |
LL |     crablangc_peek(&ret);
   |     ^^^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/inits-1.rs:34:5
   |
LL |     crablangc_peek(&y);
   |     ^^^^^^^^^^^^^^

error: crablangc_peek: bit not set
  --> $DIR/inits-1.rs:42:5
   |
LL |     crablangc_peek(&x);
   |     ^^^^^^^^^^^^^^

error: stop_after_dataflow ended compilation

error: aborting due to 4 previous errors

